--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: multiselect_dropdown
+name: multi_dropdown
 description: 'A Flutter widget that allows the user to select one or more options from a list.'
-version: 1.0.0
+version: 1.0.1
 homepage: "https://github.com/oi-narendra/multiselect-dropdown"
 
 environment:
