--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.narendra.example
+PRODUCT_BUNDLE_IDENTIFIER = com.oinarendra.multidropdownexample.example
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.narendra. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.oinarendra.multidropdownexample. All rights reserved.
