--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: multi_dropdown
 description: "Streamlined Flutter widget for versatile multi-selection with extensive customization."
-version: 2.1.1
+version: 2.1.2
 homepage: "https://github.com/oi-narendra/multiselect-dropdown"
 
 environment:
@@ -55,7 +55,4 @@ flutter:
 
 screenshots:
   - description: "Example screenshot 1"
-    path: screenshots/sample1.gif
-
-  - description: "Example screenshot 2"
-    path: screenshots/sample6.gif
+    path: screenshots/sample4.png
