chore: Update MultiDropdown widget to v3.0.0 with breaking changes and improved customization options

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: multi_dropdown
-description: "Streamlined Flutter widget for versatile multi-selection with
-  extensive customization."
-version: 3.0.0-dev.5
+description: "Streamlined Flutter widget for versatile multi-selection with extensive customization."
+version: 3.0.0
 homepage: "https://github.com/oi-narendra/multiselect-dropdown"
 
 environment:
