--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^2.3.0
-  very_good_analysis: ^6.0.0
+#   very_good_analysis: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
