--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,24 +71,15 @@ jobs:
         run: dart pub publish --dry-run
 
   release:
-    name: Release
+    name: Tag & Release
     runs-on: ubuntu-latest
     needs: test
     permissions:
       contents: write
-      id-token: write  # Required for pub.dev OIDC publishing
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          cache: true
-
-      - name: Install dependencies
-        run: flutter pub get
 
       - name: Extract CHANGELOG for this version
         id: changelog
@@ -100,6 +91,7 @@ jobs:
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Create Git tag
+        if: ${{ !inputs.dry_run }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -107,6 +99,7 @@ jobs:
           git push origin "v${{ inputs.version }}"
 
       - name: Create GitHub Release
+        if: ${{ !inputs.dry_run }}
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ inputs.version }}
@@ -114,7 +107,3 @@ jobs:
           body: ${{ steps.changelog.outputs.NOTES }}
           draft: false
           prerelease: false
-
-      - name: Publish to pub.dev
-        if: ${{ !inputs.dry_run }}
-        run: dart pub publish --force
